--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,24 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Test</title>
+    <title>Chat with AI</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <h1>Hello, FastAPI!</h1>
-    <button onclick="callAPI()">Call API</button>
-    <p id="response">...</p>
+    <h1>AI Chat</h1>
+    <div id="chat-box"></div>
+
+    <div id="input-container">
+        <input type="text" id="message-input" placeholder="Type your message here" />
+        <button id="send-button" onclick="sendMessage()">Send</button>
+    </div>
 
     <script>
-        async function callAPI() {
+        let chatId = 0;
+        const chatBox = document.getElementById("chat-box");
+
+        async function sendMessage() {
+            const userMessage = document.getElementById("message-input").value;
+            if (!userMessage.trim()) return; // 빈 메시지는 전송하지 않음
+
+            // 사용자가 보낸 메시지를 채팅창에 표시
+            addMessageToChat("user", userMessage);
+
+            // 입력 필드 비우기
+            document.getElementById("message-input").value = "";
+
+            // 서버에 보낼 요청 본문
+            const requestBody = {
+                chat_id: chatId,
+                messages: [{ role: "MEMBER", message: userMessage }]
+            };
+
             try {
-                const response = await fetch("/test/");
+                const response = await fetch("/ai/chat/", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(requestBody)
+                });
+
                 const data = await response.json();
-                console.log(data);
-                document.getElementById("response").textContent = data;
+                // 서버 응답 메시지를 채팅창에 표시
+                addMessageToChat("assistant", data.message);
+
+                // chat_id 업데이트
+                chatId = data.chat_id;
             } catch (error) {
-                document.getElementById("response").textContent = "API call failed.";
+                addMessageToChat("assistant", "API call failed.");
             }
+        }
+
+        function addMessageToChat(role, message) {
+            const messageElement = document.createElement("div");
+            messageElement.className = `message ${role}`;
+            messageElement.textContent = message;
+            chatBox.appendChild(messageElement);
+            chatBox.scrollTop = chatBox.scrollHeight; // 자동 스크롤
         }
     </script>
 </body>
