--- a/app/static/index.html
+++ b/app/static/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>AI Chat</h1>
+    <h1>Chat with AI</h1>
     <div id="chat-box"></div>
 
     <div id="input-container">
@@ -17,24 +17,110 @@
         <button id="send-button" onclick="sendMessage()">Send</button>
     </div>
 
+    <h1>Diary Entry</h1>
+    <div id="diary-box"></div>
+
+    <button id="diary-button" onclick="sendDiary()">Submit Diary</button>
+
     <script>
+        // ex = [
+        //     {
+        //         "order_index": 0,
+        //         "original_content": "오늘은 정말 정신없는 하루였다. 과제가 쌓여서 그런지 마음이 무거웠다.",
+        //         "remade_content": "오늘은 정말 정신없는 하루였다. 과제가 쌓여서 그런지 마음이 무거웠다.",
+        //         "recommend_emotion": [
+        //             "우울하다",
+        //             "불안하다",
+        //             "답답하다",
+        //             "걱정하다",
+        //             "허탈하다",
+        //             "고독하다",
+        //             "조바심하다",
+        //             "무시무시하다",
+        //             "각박하다"
+        //         ]
+        //     },
+        //     {
+        //         "order_index": 1,
+        //         "original_content": "특히 캡스톤 프로젝트가 나를 압박하고 있는 것 같다. 주제도 마음에 들지 않고, 진행 상황도 별로라서 더 걱정이다.",
+        //         "remade_content": "특히 캡스톤 프로젝트가 나를 압박하고 있는 것 같다. 주제도 마음에 들지 않고, 진행 상황도 별로라서 더 걱정이다.",
+        //         "recommend_emotion": [
+        //             "불안하다",
+        //             "걱정하다",
+        //             "우울하다",
+        //             "답답하다",
+        //             "실망하다",
+        //             "갈등하다",
+        //             "기진맥진하다",
+        //             "심란하다",
+        //             "망연자실하다",
+        //             "처참하다"
+        //         ]
+        //     },
+        //     {
+        //         "order_index": 2,
+        //         "original_content": "그래도 저녁에 치킨을 먹으면서 잠시나마 기분 전환을 했다. 양념 맛이었는데, 역시 치킨은 언제 먹어도 맛있다.",
+        //         "remade_content": "그래도 저녁에 치킨을 먹으면서 잠시나마 기분 전환을 했다. 양념 맛이었는데, 역시 치킨은 언제 먹어도 맛있다.",
+        //         "recommend_emotion": []
+        //     },
+        //     {
+        //         "order_index": 3,
+        //         "original_content": "인공지능 LLM에 대한 생각도 해봤다. 기술이 많이 발전했지만, 아직 갈 길이 멀다는 느낌이다.",
+        //         "remade_content": "인공지능 LLM에 대한 생각도 해봤다. 기술이 많이 발전했지만, 아직 갈 길이 멀다는 느낌이다.",
+        //         "recommend_emotion": [
+        //             "불안하다",
+        //             "우울하다",
+        //             "실망하다",
+        //             "걱정하다",
+        //             "상실감 들다",
+        //             "갈증 나다",
+        //             "애통하다",
+        //             "허탈하다",
+        //             "무안하다",
+        //             "신기하다"
+        //         ]
+        //     },
+        //     {
+        //         "order_index": 4,
+        //         "original_content": "이런저런 고민이 많은 하루였지만, 내일은 좀 더 나아지길 바라본다.",
+        //         "remade_content": "이런저런 고민이 많은 하루였지만, 내일은 좀 더 나아지길 바라본다.",
+        //         "recommend_emotion": [
+        //             "불안하다",
+        //             "걱정하다",
+        //             "안타깝다",
+        //             "상실감 들다",
+        //             "초조하다",
+        //             "갈망하다",
+        //             "애달프다",
+        //             "우울하다"
+        //         ]
+        //     }
+        // ]
         let chatId = 0;
         const chatBox = document.getElementById("chat-box");
+        const diaryBox = document.getElementById("diary-box");
+        const chatHistory = [{ role: "ASSISTANT", message: "안녕! 오늘 하루는 어땠어?" }];
+        const diaryData = [];
+        const selectedEmotions = {}; // 선택된 감정 초기화
+        displayDiaryResponse(ex);
+
+        document.getElementById("message-input").addEventListener("keyup", function (event) {
+            if (event.key === "Enter") sendMessage();
+        });
+        displayChatHistory();
 
         async function sendMessage() {
             const userMessage = document.getElementById("message-input").value;
-            if (!userMessage.trim()) return; // 빈 메시지는 전송하지 않음
+            if (!userMessage.trim()) return;
 
-            // 사용자가 보낸 메시지를 채팅창에 표시
-            addMessageToChat("user", userMessage);
+            chatHistory.push({ role: "MEMBER", message: userMessage });
+            displayChatHistory();
 
-            // 입력 필드 비우기
             document.getElementById("message-input").value = "";
 
-            // 서버에 보낼 요청 본문
             const requestBody = {
                 chat_id: chatId,
-                messages: [{ role: "MEMBER", message: userMessage }]
+                messages: chatHistory
             };
 
             try {
@@ -47,22 +133,116 @@
                 });
 
                 const data = await response.json();
-                // 서버 응답 메시지를 채팅창에 표시
-                addMessageToChat("assistant", data.message);
+                chatHistory.push({ role: data.role, message: data.message });
+                displayChatHistory();
 
-                // chat_id 업데이트
                 chatId = data.chat_id;
             } catch (error) {
-                addMessageToChat("assistant", "API call failed.");
+                chatHistory.push({ role: "ASSISTANT", message: "API call failed." });
+                displayChatHistory();
             }
         }
 
-        function addMessageToChat(role, message) {
-            const messageElement = document.createElement("div");
-            messageElement.className = `message ${role}`;
-            messageElement.textContent = message;
-            chatBox.appendChild(messageElement);
-            chatBox.scrollTop = chatBox.scrollHeight; // 자동 스크롤
+        async function sendDiary() {
+            const requestBody = {
+                chat_id: chatId,
+                messages: chatHistory
+            };
+
+            try {
+                const response = await fetch("/ai/diary/", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(requestBody)
+                });
+
+                const data = await response.json();
+                console.log(data);
+                diaryData = data.content_list;
+                for (let i = 0; i < diaryData.length; i++)
+                    diaryData[i].remade_content = diaryData[i].original_content;
+                displayDiaryResponse(diaryData);
+            } catch (error) {
+                console.error("Diary API call failed.", error);
+            }
+        }
+
+        function displayChatHistory() {
+            chatBox.innerHTML = "";
+
+            chatHistory.forEach((chat) => {
+                const messageElement = document.createElement("div");
+                messageElement.className = `message ${chat.role.toLowerCase()}`;
+                messageElement.textContent = chat.message;
+                chatBox.appendChild(messageElement);
+            });
+
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
+
+        function displayDiaryResponse(contentList) {
+            diaryBox.innerHTML = ""; // 기존 다이어리 초기화
+
+            contentList.forEach((content) => {
+                const diaryEntry = document.createElement("div");
+                diaryEntry.className = "diary-entry";
+                diaryEntry.innerHTML = `<p>${content.remade_content}</p>`;
+
+                selectedEmotions[content.order_index] = []; // 항목별로 선택된 감정 배열 생성
+
+                content.recommend_emotion.forEach((emotion, idx) => {
+                    const emotionContainer = document.createElement("li");
+                    emotionContainer.innerHTML = `
+                        <input type="checkbox" id="emotion-${content.order_index}-${idx}" class="emotion-checkbox">
+                        <label for="emotion-${content.order_index}-${idx}">${emotion}</label>
+                    `;
+
+                    // 체크박스 이벤트 리스너 추가
+                    const checkbox = emotionContainer.querySelector("input");
+                    checkbox.addEventListener("change", async () => {
+                        if (checkbox.checked) {
+                            selectedEmotions[content.order_index].push(emotion);
+                        } else {
+                            const emotionIndex = selectedEmotions[content.order_index].indexOf(emotion);
+                            if (emotionIndex > -1) {
+                                selectedEmotions[content.order_index].splice(emotionIndex, 1);
+                            }
+                        }
+                        if (selectedEmotions[content.order_index].length === 0) {
+                            content.remade_content = content.original_content;
+                            diaryEntry.querySelector("p").textContent = content.remade_content;
+                            return;
+                        }
+                        const response = await fetch("/ai/remake/", {
+                            method: "POST",
+                            headers: {
+                                "Content-Type": "application/json",
+                            },
+                            body: JSON.stringify({
+                                original_content: content.original_content,
+                                emotion_list: selectedEmotions[content.order_index],
+                            }),
+                        });
+
+                        if (response.ok) {
+                            const result = await response.json();
+                            content.remade_content = result.remade_content;
+                            diaryEntry.querySelector("p").textContent = result.remade_content;
+                            console.log("서버로부터 응답:", result.remade_content);
+                        } else {
+                            console.error("서버 요청 실패:", response.statusText);
+                        }
+                    });
+
+                    diaryEntry.appendChild(emotionContainer);
+                });
+
+                diaryBox.appendChild(diaryEntry);
+            });
+
+            diaryBox.scrollTop = diaryBox.scrollHeight;
         }
     </script>
 </body>
